--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ $db_name = "ailavator_system";
 $db_user = "ailavator_admin";
 $db_pass = "Sup3rS3cr3tDBP@ss!";
 
-// Admin credentials for initial setup
-$username = "a1l4_69";
-$password = "n3utr4liz3_a1la";
+// Admin credentials for dummy setup
+$username = "adm1n_t3st";
+$password = "p4ssw0rd_t3st";
 
 // API Keys
 $api_key = "sk_live_51Hq8J2K3cR9mN7P5xY9wV2zA8bC0dF";
